app/containers/NftGallery/NftGallery.scss
.newsPanel {
  height: 100%;
  overflow: auto;
}

.nftGalleryPanelContent {
  padding: 12px !important;
}

.nftGalleryContainer {
  min-height: 100%;
  display: flex;
  flex-direction: column;
  height: 100%;
}

.nftItemsContainer {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;

  .nftWrapper {
    padding: 12px;
    max-width: 235px;
    display: flex;
    flex-direction: column;

    p {
      margin-bottom: 0;
      margin-top: 0;
      line-height: 19px;
    }

    code {
      font-size: 9px;
    }

    .collectionName {
      opacity: 0.5;
      text-transform: uppercase;
      font-size: 12px;
      line-height: 19px;
    }

    .tokenId {
      display: flex;
      align-items: center;
      font-size: 12px;
      .collectionName {
        margin-right: 4px;
      }
    }

    img {
      cursor: pointer;
      border-radius: 6px 6px 0 0;
    }

    video {
      cursor: pointer;
    }
  }
}

.content {
  border: 1px solid var(--news-content-border-color);
  padding: 6px 12px;
  border-radius: 0 0 6px 6px;
  height: 100%;
  text-overflow: ellipsis;
}

.placeholderContainer {
  border: 1px solid var(--news-content-border-color);

  svg {
    width: 150px;
    height: 150px;
    padding: 50px;
    opacity: 0.5;
  }

  svg path {
    fill: var(--input-active-border);
  }
}

.loadMoreButton {
  margin: 24px 0;
  width: 400px;
  max-width: 400px;
}

.empty {
  position: absolute;
  width: 50%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.buttonLoadingIndicator {
  position: relative;
  width: 15px;
  height: 30px;
  opacity: 0.4;
  margin: auto;
  left: auto;
  top: auto;
  transform: none;
}

.transferButton {
  margin: 12px 0;
}

.nftContainer {
  display: flex;
  max-width: 100px;
}

